# iceberg-rust

./: Cargo.toml
datafusion_iceberg/src/: error.rs  pruning_statistics.rs  table.rs
datafusion_iceberg/src/catalog/: mirror.rs
iceberg-glue/: Cargo.toml
iceberg-glue-catalog/src/: lib.rs
iceberg-glue/src/: catalog.rs  error.rs  lib.rs  schema.rs  utils.rs
iceberg-rest-catalog/src/: catalog.rs  error.rs
iceberg-rust/: Cargo.toml
iceberg-rust-spec/src/: error.rs
iceberg-rust-spec/src/arrow/: schema.rs
iceberg-rust-spec/src/spec/: manifest.rs  manifest_list.rs  materialized_view_metadata.rs  partition.rs  schema.rs  snapshot.rs  sort.rs  table_metadata.rs  tabular.rs  types.rs  values.rs  view_metadata.rs
iceberg-rust/src/: error.rs  sql.rs
iceberg-rust/src/arrow/: read.rs  write.rs
iceberg-rust/src/catalog/: bucket.rs  commit.rs  identifier.rs  mod.rs  namespace.rs  tabular.rs
iceberg-rust/src/file_format/: parquet.rs
iceberg-rust/src/materialized_view/: materialized_view_builder.rs  mod.rs  storage_table.rs
iceberg-rust/src/materialized_view/transaction/: mod.rs
iceberg-rust/src/table/: manifest.rs  mod.rs  pruning_statistics.rs  table_builder.rs
iceberg-rust/src/table/transaction/: append.rs  mod.rs  operation.rs
iceberg-rust/src/util/: mod.rs
iceberg-rust/src/view/: mod.rs  view_builder.rs
iceberg-rust/src/view/transaction/: mod.rs  operation.rs
iceberg-sql-catalog/src/: error.rs  lib.rs
